# testnats

./: .gitignore  README.MD  nats.conf  nats.py
test_project/: db.sqlite3  pyproject.toml
test_project/test_app/: apps.py  auth_backends.py  models.py  nats.py  signals.py  urls.py  views.py
test_project/test_app/migrations/: 0001_initial.py  0002_dummy_password_alter_dummy_name.py  0003_geo.py
test_project/test_app/templates/: geo.html  template.html  user.html
test_project/test_project/: custom_uvicorn_worker.py  settings.py  urls.py
test_project/test_project/middleware/: middleware_jwt.py
test_project/test_project/utils/: jwt_utils.py  nats_jwt_utils.py
vue-project/: package-lock.json  package.json  test.js
vue-project/src/: App.vue
vue-project/src/components/: MessageList.vue
vue-project/src/router/: index.js
vue-project/src/services/: api.js  nats.js
vue-project/src/stores/: addressbook.js  channel.js  geo.js  message.js  user.js
vue-project/src/views/: Dashboard.vue  Login.vue  Test.vue
worker/: get_nats.py  send_nats.py
